--- a/app/assets/stylesheets/partials/_navigation.sass
+++ b/app/assets/stylesheets/partials/_navigation.sass
@@ -47,7 +47,7 @@ nav
                         border-radius: 100%
                         float: left
                         height: 100%
-                        border: 1px solid #585858
+                        border: 1px solid #252525
                     &:hover
                         transform: scale(0.95)
             @import 'partials/profile_modal'
