--- a/app/assets/stylesheets/partials/dashboard/_core.sass
+++ b/app/assets/stylesheets/partials/dashboard/_core.sass
@@ -5,8 +5,8 @@ bikboo-shell.tree-dashboard
         min-width: 600px !important
     background: #eeeeee
     position: relative
-    min-height: 100vh
-    min-width: 600px
+    height: 100%
+    min-width: min-content
     h1, h2, h3, h4, h5, h6
         margin: 0
     p
