--- a/app/assets/stylesheets/partials/dashboard/editor/_sidebar.sass
+++ b/app/assets/stylesheets/partials/dashboard/editor/_sidebar.sass
@@ -45,7 +45,7 @@
                     display: block
                     text-decoration: none
                     color: #eeeeee
-                    border-bottom: solid 1px #212121
+                    border-bottom: solid 1px #2d2d2d
                     -webkit-transition: padding 100ms ease, color 100ms ease, border-left 100ms ease
                     -o-transition: padding 100ms ease, color 100ms ease, border-left 100ms ease
                     transition: padding 100ms ease, color 100ms ease, border-left 100ms ease
